--- a/src/app/routes/warehouse/components/out-batch/out-batch.component.html
+++ b/src/app/routes/warehouse/components/out-batch/out-batch.component.html
@@ -13,7 +13,7 @@
       <th>序号</th>
       <th>入库单号</th>
       <th>单价</th>
-      <th>库存数量</th>
+      <th>出库数量</th>
       <th>入库时间</th>
       <th>入库类型</th>
     </tr>
@@ -23,7 +23,7 @@
       <td>{{ (page.pageIndex - 1) * page.pageSize + index + 1 }}</td>
       <td>{{ data.in_code }}</td>
       <td>{{ data.price }}</td>
-      <td>{{ data.exit_num }}</td>
+      <td>{{ data.out_num }}</td>
       <td>{{ data.in_date }}</td>
       <td>{{ operationMap[data.in_type] }}</td>
     </tr>
