feat(*): add download excel

--- a/src/app/routes/warehouse/pages/store-history/store-history.component.html
+++ b/src/app/routes/warehouse/pages/store-history/store-history.component.html
@@ -12,6 +12,7 @@
         <button nz-button (click)="showFilter = !showFilter">
           <i nz-icon nzType="filter" nzTheme="outline"></i> 筛选
         </button>
+        <button nz-button (click)="download()" nzType="primary" class="ml-sm">下载excel</button>
       </div>
     </div>
   </ng-template>
