--- a/src/app/routes/warehouse/pages/store-in/store-in.component.html
+++ b/src/app/routes/warehouse/pages/store-in/store-in.component.html
@@ -13,6 +13,7 @@
           <i nz-icon nzType="filter" nzTheme="outline"></i> 筛选
         </button>
         <button nz-button nzType="primary" (click)="showStoreIn()" class="ml-sm">入库</button>
+        <button nz-button nzType="primary" (click)="download()" class="ml-sm">下载excel</button>
       </div>
     </div>
   </ng-template>
@@ -80,7 +81,7 @@
           <th>序号</th>
           <th>类目名</th>
           <th>单价</th>
-          <th>数量</th>
+          <th>入库数量</th>
           <th>入库类型</th>
           <th nzWidth="150px">入库单号</th>
           <th>入库时间</th>
