--- a/src/app/routes/warehouse/components/store-out-detail/store-out-detail.component.html
+++ b/src/app/routes/warehouse/components/store-out-detail/store-out-detail.component.html
@@ -2,7 +2,7 @@
   <div nz-row [nzGutter]="24" *ngFor="let item of storeOutList">
     <div nz-col [nzSpan]="8">
       <nz-form-item>
-        <nz-form-label>类目名</nz-form-label>
+        <nz-form-label>商品名</nz-form-label>
         <nz-form-control>
           <nz-select
             class="select-sm"
