--- a/src/app/routes/warehouse/components/store-in-detail/store-in-detail.component.html
+++ b/src/app/routes/warehouse/components/store-in-detail/store-in-detail.component.html
@@ -1,7 +1,7 @@
 <nz-table #basicTable [nzData]="storeInList" nzShowPagination="false">
   <thead>
     <tr>
-      <th>类目名</th>
+      <th>商品名</th>
       <th>入库类型</th>
       <th>单价</th>
       <th>数量</th>
