--- a/src/app/routes/warehouse/pages/store-out/store-out.component.html
+++ b/src/app/routes/warehouse/pages/store-out/store-out.component.html
@@ -29,7 +29,7 @@
                 nz-input
                 [(ngModel)]="query.word"
                 [ngModelOptions]="{ standalone: true }"
-                placeholder="请输入类目名"
+                placeholder="请输入商品名"
                 (keyup.enter)="getList(true)"
               />
             </nz-input-group>
@@ -69,7 +69,7 @@
       <thead>
         <tr>
           <th>序号</th>
-          <th>类目名</th>
+          <th>商品名</th>
           <th>出库数量</th>
           <th nzWidth="150px">出库单号</th>
           <th>出库时间</th>
