feat(type): add goods type

--- a/src/app/routes/goods/components/goods-type-detail/goods-type-detail.component.html
+++ b/src/app/routes/goods/components/goods-type-detail/goods-type-detail.component.html
@@ -1,7 +1,7 @@
 <form nz-form [formGroup]="validateForm">
   <nz-form-item>
-    <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired>商品</nz-form-label>
-    <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="请输入商品名!">
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired>商品分类</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="请输入商品类别名称!">
       <input nz-input formControlName="name" />
     </nz-form-control>
   </nz-form-item>
