--- a/src/app/routes/goods/pages/type-list/type-list.component.html
+++ b/src/app/routes/goods/pages/type-list/type-list.component.html
@@ -27,7 +27,7 @@
               nz-input
               [(ngModel)]="query.word"
               [ngModelOptions]="{ standalone: true }"
-              placeholder="请输入商品名"
+              placeholder="请输入商品分类名称"
               (keyup.enter)="getList(true)"
             />
           </nz-input-group>
