--- a/src/app/routes/warehouse/pages/store-in/store-in.component.html
+++ b/src/app/routes/warehouse/pages/store-in/store-in.component.html
@@ -36,6 +36,14 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
+          <nz-form-label class="table-header-label">分类名称</nz-form-label>
+          <nz-form-control>
+            <nz-select [(ngModel)]="query.type_id" class="select-item" nzAllowClear nzShowSearch>
+              <nz-option *ngFor="let item of typeList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
+            </nz-select>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
           <nz-form-label class="table-header-label">入库时间</nz-form-label>
           <nz-form-control>
             <nz-range-picker
