fix(goods): fix goods_type list cannot get

--- a/src/app/routes/goods/pages/goods-wrapper/goods-wrapper.component.html
+++ b/src/app/routes/goods/pages/goods-wrapper/goods-wrapper.component.html
@@ -1,5 +1,5 @@
 <shared-page-container>
-  <nz-tabset>
+  <nz-tabset [nzAnimated]="false">
     <nz-tab nzTitle="商品分类">
       <ng-template nz-tab>
         <app-type-list></app-type-list>
