fix(*): fix cannot get type list

--- a/src/app/routes/warehouse/components/batch/batch.component.html
+++ b/src/app/routes/warehouse/components/batch/batch.component.html
@@ -23,7 +23,7 @@
       <td>{{ (page.pageIndex - 1) * page.pageSize + index + 1 }}</td>
       <td>{{ data.in_code }}</td>
       <td>{{ data.price }}</td>
-      <td>{{ data.exit_num }}</td>
+      <td>{{ data.exist_num }}</td>
       <td>{{ data.in_date }}</td>
       <td>{{ operationMap[data.in_type] }}</td>
     </tr>
