--- a/src/app/routes/warehouse/pages/store-history/store-history.component.html
+++ b/src/app/routes/warehouse/pages/store-history/store-history.component.html
@@ -36,7 +36,7 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-label class="table-header-label">分类名称</nz-form-label>
-          <nz-form-control>
+          <nz-form-control class="table-header-input">
             <nz-select [(ngModel)]="query.type_id" class="select-item" nzAllowClear nzShowSearch>
               <nz-option *ngFor="let item of typeList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
             </nz-select>
@@ -88,7 +88,9 @@
         <tr>
           <th>序号</th>
           <th>商品名</th>
-          <th>操作类型</th>
+          <th>商品分类</th>
+          <th>入库类型</th>
+          <th>状态</th>
           <th>数量</th>
           <th>时间</th>
         </tr>
@@ -97,7 +99,9 @@
         <tr *ngFor="let data of storeList; let index = index">
           <td>{{ (page.pageIndex - 1) * page.pageSize + index + 1 }}</td>
           <td><app-table-tip [width]="150" [text]="data.goods_name"></app-table-tip></td>
+          <td>{{ data.type_name }}</td>
           <td>{{ operationMap[data.operation] }}</td>
+          <td>{{ stateMap[data.state] }}</td>
           <td>{{ data.num }}</td>
           <td>{{ data.date }}</td>
         </tr>
