--- a/src/app/routes/warehouse/pages/store-in/store-in.component.html
+++ b/src/app/routes/warehouse/pages/store-in/store-in.component.html
@@ -37,7 +37,7 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-label class="table-header-label">分类名称</nz-form-label>
-          <nz-form-control>
+          <nz-form-control class="table-header-input">
             <nz-select [(ngModel)]="query.type_id" class="select-item" nzAllowClear nzShowSearch>
               <nz-option *ngFor="let item of typeList" [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
             </nz-select>
@@ -88,6 +88,7 @@
         <tr>
           <th>序号</th>
           <th>商品名</th>
+          <th>商品分类</th>
           <th>单价</th>
           <th>入库数量</th>
           <th>入库类型</th>
@@ -100,6 +101,7 @@
         <tr *ngFor="let data of storeList; let index = index">
           <td>{{ (page.pageIndex - 1) * page.pageSize + index + 1 }}</td>
           <td><app-table-tip [width]="150" [text]="data.goods_name"></app-table-tip></td>
+          <td>{{ data.type_name }}</td>
           <td>{{ data.price }}</td>
           <td>{{ data.in_num }}</td>
           <td>{{ inTypeMap[data.in_type] }}</td>
